--- a/style/style.css
+++ b/style/style.css
@@ -110,9 +110,7 @@ body{
     justify-content: space-around;
     margin-bottom: 20px;
 }
-caption{
-    width: 50%;
-}
+
 .input label{
     display: block;
     margin-bottom: 5px;
@@ -135,4 +133,23 @@ caption{
     border-radius: 5px;
     font-size: 15px;
     min-height: 100px;
+}
+footer{
+    background-color: #e4e4ee;
+    text-align: center;
+    height: 350px;
+}
+
+ul{
+    display: flex;
+    justify-content: center;
+}
+ul li{
+    list-style: none;
+}
+ul li a{
+    text-decoration: none;
+    font-size: smaller;
+    color:  rgb(150, 132, 132);
+    padding: 20px;
 }
